improve water tank